--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,7 +4,10 @@ jobs:
 
   build:
     name: Build
-    runs-on: [ubuntu-latest, windows-latest]
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
 
     - name: Set up Go 1.13
