--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go
 on: [push]
 jobs:
   build-linux:
-    name: Build
+    name: Build-Linux
     runs-on: [ubuntu-latest]
     steps:
 
@@ -31,7 +31,7 @@ jobs:
         # Directory containing files to upload
         path: sha256
   build-windows:
-    name: Build
+    name: Build-Windows
     runs-on: [windows-latest]
     steps:
 
@@ -43,14 +43,6 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
     - name: Build
       run: go build -v .
     - name: Upload windows artifact
