--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,3 +51,25 @@ jobs:
         name: sha256
         # Directory containing files to upload
         path: sha256.exe
+  build-macos:
+    name: Build-MacOS
+    runs-on: [macos-latest]
+    steps:
+
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Build
+      run: go build -v .
+    - name: Upload macos artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: sha256
+        # Directory containing files to upload
+        path: sha256
